RESOLVED FIXED223961
REGRESSION(r274607): media controls script is visible in Web Inspector even without the engineering "Show WebKit-internal scripts" enabled
https://bugs.webkit.org/show_bug.cgi?id=223961
Summary REGRESSION(r274607): media controls script is visible in Web Inspector even w...
Devin Rousso
Reported 2021-03-30 14:58:47 PDT
.
Attachments
Patch (5.13 KB, patch)
2021-03-30 15:05 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-03-30 15:05:49 PDT
Yusuke Suzuki
Comment 2 2021-03-30 15:07:36 PDT
Comment on attachment 424706 [details] Patch r=me
EWS
Comment 3 2021-03-30 20:01:16 PDT
Committed r275262: <https://commits.webkit.org/r275262> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424706 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-30 20:02:13 PDT
Note You need to log in before you can comment on or make changes to this bug.